<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="restaurant"
            type="com.example.cmpt276project.model.Restaurant" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/restraunt_icon"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/item_name"
                android:padding="5dp"
                android:textSize="12sp"
                android:layout_toEndOf="@id/item_name"
                android:text="@{restaurant.name}"/>

            <TextView
                android:id="@+id/item_issues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_restaurant_name"
                android:padding="5dp"
                android:text="@string/total_number_of_issues"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_total_issues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_restaurant_name"
                android:layout_toRightOf="@id/item_issues"
                android:padding="5dp"
                android:textSize="12sp"
                android:layout_toEndOf="@id/item_issues"
                android:text="@{String.valueOf(restaurant.totalNumIssues)}"/>

            <TextView
                android:id="@+id/item_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_restaurant_name"
                android:layout_toRightOf="@id/item_total_issues"
                android:padding="5dp"
                android:textSize="12sp"
                android:layout_toEndOf="@id/item_total_issues" />

            <TextView
                android:id="@+id/item_inspection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_total_issues"
                android:padding="5dp"
                android:text="@string/last_inspection"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_last_inspection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_total_issues"
                android:layout_toRightOf="@id/item_inspection"
                android:padding="5dp"
                android:textSize="12sp"
                android:layout_toEndOf="@id/item_inspection"
                android:text="@{restaurant.lastInspectionDateFormatted}"
                />

            <ImageButton
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_star_border_24"
                />

        </RelativeLayout>

    </LinearLayout>

</layout>
