<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="restaurant"
            type="com.example.cmpt276project.model.Restaurant" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.restaurantDetail.RestaurantDetailsActivity">

        <TextView
            android:id="@+id/NameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/Restaurant_details"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_container" />

        <TextView
            android:id="@+id/AddressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/AddressView"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NameView" />

        <TextView
            android:id="@+id/GPSView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/GPSCoordView"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddressView" />

        <RelativeLayout
            android:id="@+id/name_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@{restaurant.name}"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <ImageButton
                android:id="@+id/image_isFav"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_star_border_24"
                android:layout_toEndOf="@id/nameText"
                android:layout_toRightOf="@id/nameText" />

        </RelativeLayout>


        <TextView
            android:id="@+id/addressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/AddressView"
            app:layout_constraintStart_toEndOf="@+id/AddressView"
            app:layout_constraintTop_toTopOf="@+id/AddressView"
            android:text="@{restaurant.address}"/>

        <TextView
            android:id="@+id/GPSText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/GPSView"
            app:layout_constraintStart_toEndOf="@+id/GPSView"
            app:layout_constraintTop_toTopOf="@+id/GPSView"
            android:setGPS="@{restaurant}"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecentInspectionView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/InspectionView"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                />

            <TextView
                android:id="@+id/no_inspection_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_inspections_found_msg"
                android:gravity="center"
                android:textSize="26sp"
                android:visibility="gone"
                />

        </RelativeLayout>



        <TextView
            android:id="@+id/RecentInspectionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/RecentInspectionView"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GPSView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
